Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,5 @@ steps:
 
 - script: |
     npm install
-    DEBUG=myapp:* npm start
-  displayName: 'npm install and start'
+    npm build
+  displayName: 'npm install and build'
