Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,12 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    ArtifactName: 'drop'
+    targetPath: '$(Build.ArtifactStagingDirectory)' 
+    publishLocation: 'Container'
+
 - script: |
     npm install
     npm build
