--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,14 +12,14 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '12.x'
   displayName: 'Install Node.js'
 
 - task: PublishBuildArtifacts@1
   inputs:
     ArtifactName: 'drop'
     targetPath: '$(Build.ArtifactStagingDirectory)'
-    PathtoPublish: '$(Build.ArtifactStaginDirectory)'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/**/'
     publishLocation: 'Container'
 
 - script: |
