Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
   inputs:
     ArtifactName: 'drop'
     targetPath: '$(Build.ArtifactStagingDirectory)'
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/**/'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     publishLocation: 'Container'
 
 - script: |
