Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,8 +24,9 @@ steps:
     npm install
     npm build
   displayName: 'npm install and build'
+
 - task: PublishBuildArtifacts@1
   inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
-    targetPath: '$(Build.ArtifactStagingDirectory)'
     publishLocation: 'Container'
