--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -14,21 +14,18 @@ steps:
   inputs:
     versionSpec: '12.x'
   displayName: 'Install Node.js'
-
-- script: |
-    npm install
-    npm build
-  displayName: 'npm install and build'
-
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '$(build.sourcesdirectory)'
-    Contents: |
-      **\bin\$(BuildConfiguration)\**
-      src\*.testsettings
-    TargetFolder: '$(build.artifactstagingdirectory)'
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: '**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+
+- script: |
+    npm install
+    npm build
+  displayName: 'npm install and build'
