--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,6 +23,7 @@ steps:
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
+    publishLocation: 'Container'
 
 - script: |
     npm install
